--- a/AcWing/src/com/richard/算法基础.md
+++ b/AcWing/src/com/richard/算法基础.md
@@ -208,3 +208,92 @@ public class 二分 {
     
 }
 ````
+### 前缀和
+````java
+import java.util.Scanner;
+
+public class 前缀和 {
+
+    private static int N = 100010;
+
+    public static void main(String[] args) {
+
+        Scanner sc = new Scanner(System.in);
+
+        int n = sc.nextInt();
+        int m = sc.nextInt();
+
+        int[] a = new int[N];
+        int[] s = new int[N];
+
+
+        for (int i=1; i<=n; i++) {
+            a[i] = sc.nextInt();
+        }
+
+        // 前缀和初始化
+        for (int i=1; i<=n; i++) {
+            s[i] = s[i-1] + a[i];
+        }
+
+        while (m-- != 0) {
+            
+            int l = sc.nextInt();
+            int r = sc.nextInt();
+
+            System.out.println(s[r]-s[l-1]);
+        }
+
+
+    }
+
+}
+````
+### 差分
+````java
+public class 差分 {
+
+    private static final int N = 100010;
+    private static int[] a = new int[N];
+    private static int[] b = new int[N];
+
+    public static void main(String[] args) {
+
+        Scanner sc = new Scanner(System.in);
+
+        int n = sc.nextInt();
+        int m = sc.nextInt();
+
+        for (int i=1; i<=n; i++) {
+            a[i] = sc.nextInt();
+        }
+
+        for (int i=1; i<=n; i++) {
+            insert(i,i,a[i]); // 初始化b序列
+        }
+
+        while (m-- != 0) {
+            int l = sc.nextInt();
+            int r = sc.nextInt();
+            int c = sc.nextInt();
+            insert(l,r,c);
+        }
+
+        // 求a[i]
+        for (int i=1; i<=n; i++) {
+            b[i] += b[i-1];
+        }
+
+        for (int i=1; i<=n; i++) {
+            System.out.print(b[i] + " ");
+        }
+
+    }
+
+    public static void insert(int l, int r, int c) {
+        b[l] += c;
+        b[r+1] -= c;
+    }
+
+}
+````
